[package]
name = "pkhex-rs"
version = "0.1.0"
edition = "2018"
authors = ["Devin <devdevin541@gmail.com>", "Hector Mejia <caquillo722@gmail.com>"]
description = "Cross platform frontend for the pkhexcore-rs library"
readme = "README.md"
repository = "https://github.com/caquillo07/pkhex-rs"
license = "Apache-2.0"
keywords = ["yew", "trunk", "pokemon", "pkhex"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.17.4"
pkhexcore = { git = "https://github.com/inspier/pkhexcore-rs" }
log = "0.4.6"
wasm-logger = "0.2.0"

